# depth_map_2_mesh_ray_tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_thirdparty.sh
apps/: ply_mesh_to_depth_maps.cpp  render_images_from_mesh.cpp
include/: colmap_reader.h  files_utils.h  image_to_rays.h  mesh_loader.h  mesh_raycaster.h  utils.h
source/: colmap_reader.cpp
